@startuml DiagramKlas
skinparam class {
    BackgroundColor LightYellow
    BorderColor Black
}

package "Classes" {

    package "Models" {
        class Aplikacja {
            - object Operacja
            - object Wyswietlanie
            - object SzablonHtml
            - naglowek
            - zawodnik
            - potwierdzUsuniecie

            # Wyswietl(): void
            # Usun(): void
            # Edytuj(): void
            # Zapisz(): void
            # Formularz_Dodaj(): void
            # Dodaj(): void
            # Filtry(): void
            # Szukaj(): void
            # Zaloguj(): void
            # Error404(): void
        }
        class BazaDanych {
            + Polaczenie()
            + Rozlaczenie()
            + Zapytanie()
        }
        class WyswietlaniePilkarzy{
            + WyswietlFiltrowanychPilkarzy(): void
            + WyswietlFormularzDodawania(): void
            + WyswietlFomularzEdycji(): void
            + WyswietlaniePilkarzy(): void
        }

        class OperacjePilkarzy{
            + ZapiszPilkarza(): void
            + DodajPilkarza(): void
            + UsunPilkarza(): void
            + FiltrujPilkarzy(): void
        }

        class PobieraczObrazowWikipedia{
            - API_URL
            - ANON_AVATAR
            +pobierzDaneObrazu(): void
            +pobierzZrodlo(): mixed
            +updateObrazka(): mixed
            +wyswietlObraz(): string
        }

        abstract class ZapytaniaSql{
            +getWszytkieKolumnyPilkarz(): array
            +select_Wyswietl(): string
            +liczbaZawodnikow(): string
            +select_ZawodnikById(): string
            +select_Edytuj(): string
            +update_Zapisz(): string
            +insert_Dodaj(): string
            +select_Kraj(): string
            +select_Numernakoszulce(): string
            +select_Pozycja(): string
            +select_ostaniZawodnik(): string
            +select_Awatar(): string
            +insert_Awatar(): string
            +update_Awatar(): string
            +delete_Awatar(): string
            +delete_pilkarz(): string
            +FiltrujTest(): string
            +Select_Filtruj(): string
        }
        class FiltrowanieSql{
            +getWyswietl(): string
            +setSql(): mixed
            -getImie(): string
            -getNazwisko(): string
            -getNoga(): string
            -getKraj(): string
            -getNumernakoszulce(): string
            -getPozycja(): string
            -getSortowanie(): string
            -sprawdzCzyUstawiono()
            -sprawdzWhere()
            -getWhere(): string
            -ZapytanieDlaWhere(): string
            +getCaleZapytanie(): string
        }
    }


    package "Views"{
        class StronaHtml{
            +Head(): void
            +Header(): void
            -LazyLoadingJS(): void
            +Footer(): void

        }

        class SzablonHtml {
            +Zawodnik(): void
            +Naglowek(): void
            +potwierdzUsuniecie(): void
            +Formularz(): void
            +FormularzLogowania(): void
            +FomularzFiltrowaniaJs(): void
            +FormularzFiltrowania(): void
        }

    }

        package "Controllers" {

        class Autoryzacja{

            + SprawdzCzyZalogowano(): void
            + SprobojZalogowac(): void
            + Wyloguj(): void
            -cssDlaNiezalogowanych(): void
        }
        class FiltrowanieKontroler{
            # object Dane 
            # string imie
            # string nazwisko 
            # string sortowanie
            # string noga
            # string kraj 
            # string numernakoszulce 
            # string pozycja 

        }
        class KontrolerDanych{
            +getMetoda(): string
            +getID(): int
            +getPOST(): string
            +setPOST(): array

        }
        class KontrolerStrony{
            +Routing()
        }

        class PilkarzPost{
            # int id
            # string imie
            # string nazwisko
            # string awatar

            # object Dane
            # object Wikipedia

            +getId(): int
            +getNazwisko(): string
            +getAwatar(): mixed
            +getTablicaPOST(): mixed
        }

        class ZarzadzaniePilkarzami{
            # object Pilkarz
            # object Formularz

            # string id
            # string imie
            # string nazwisko
            # string awatar
            # array tablicaPost
        }

    }


    package "Helpers" {

        class BazaDanychHelper
        {
            +pobierzDane(): array
            +LiczbaPilkarzy(): int
            +OstatniPilkarz(): int
        }

        class FormularzHelper
        {
            -kraje
            -numery
            -pozycjepublicpublic
            -SelectHTML(): string
            +Pilkarz(): void
            +Filtrowanie(): void
            +FormularzDodawania(): void
        }
    }


    class Projekt {
        + Uruchom()
    }

    class Fl{
        +Views()
        +Models()
        +Controllers()
        +Helpers()
    }

    
    Projekt --|> Fl #Red
    Projekt --|> KontrolerStrony #Red
    Projekt --|> StronaHtml #Red

    KontrolerStrony --|> Aplikacja #Red
    KontrolerStrony --|> Autoryzacja

    Aplikacja --> SzablonHtml
    Aplikacja --> WyswietlaniePilkarzy #Blue
    Aplikacja --> OperacjePilkarzy #Blue

    OperacjePilkarzy --> ZarzadzaniePilkarzami #Blue
    WyswietlaniePilkarzy --> ZarzadzaniePilkarzami #Blue

    BazaDanychHelper --|> BazaDanych #Green

    ZarzadzaniePilkarzami --|> BazaDanychHelper #LawnGreen
    ZarzadzaniePilkarzami --|> ZapytaniaSql
    ZarzadzaniePilkarzami --|> PilkarzPost
    ZarzadzaniePilkarzami --|> FormularzHelper



    ZapytaniaSql --|> FiltrowanieSql #Orange
    FiltrowanieSql --|> FiltrowanieKontroler #Orange

    PilkarzPost --|> PobieraczObrazowWikipedia
    PilkarzPost --|> KontrolerDanych



}
@enduml
